--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "react": "^16.9.0",
     "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-redux": "^7.1.1",
+    "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
+    "tonal": "^2.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
