--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
+    "react-sizeme": "^2.6.7",
     "redux": "^4.0.4",
-    "tonal": "^2.2.2"
+    "tonal": "^2.2.2",
+    "tone": "^13.8.25"
   },
   "scripts": {
     "start": "react-scripts start",
