--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.iu.edu/seaweber/Bryte",
+  "homepage": "https://seaweber.github.io/Bryte/",
   "name": "bryte",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +15,7 @@
     "react-sizeme": "^2.6.7",
     "redux": "^4.0.4",
     "tonal": "^2.2.2",
+    "tonal-detect": "^2.2.2",
     "tone": "^13.8.25"
   },
   "scripts": {
